# obs-audio-recorder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
ci/: CMakeLists.txt  buildspec.json
cmake/: Info.plist.in  obsconfig.h.in
scripts/: build-ci.ps1  build.ps1  build.sh  dev-obs.sh  install-to-obs.ps1  install-to-obs.sh  package-windows-installer.ps1
src/: main.cpp
windows/: obs-audio-recorder.iss
